part 4 + hashmap compute

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,45 @@
             <artifactId>JColor</artifactId>
             <version>5.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.7.0.1746</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                <sonar.host.url>
+                    http://localhost:9000
+                </sonar.host.url>
+                <sonar.projectKey>
+                    Test
+                </sonar.projectKey>
+                <sonar.login>
+                    sqp_aafb414bc2f18ec61c860f4a80121a5c01881d2e
+                </sonar.login>
+            </properties>
+        </profile>
+    </profiles>
     
 </project>
